[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://rect234.png" type="Texture" id=2]
[ext_resource path="res://Fifaks10Dev1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Flag.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="TileSet" id=1]
0/name = "rect234.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 3000, 2000, 100, 100 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 100, 100 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true
smoothing_speed = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="MainCamera"]

[node name="Status" type="Label" parent="MainCamera/CanvasLayer"]
margin_left = 21.0
margin_top = 20.0
margin_right = 526.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "Твой ход"

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 50, 50 )
tile_set = SubResource( 1 )
cell_size = Vector2( 100, 100 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1

[node name="Flag" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 200, 100 )

[node name="GetUsers" type="HTTPRequest" parent="."]

[node name="RequestTimer" type="Timer" parent="."]
autostart = true

[node name="GetPole" type="HTTPRequest" parent="."]

[connection signal="area_entered" from="TileMap/Flag" to="." method="_on_Flag_area_entered"]
[connection signal="request_completed" from="GetUsers" to="." method="_on_GetUsers_request_completed"]
[connection signal="timeout" from="RequestTimer" to="." method="_on_RequestTimer_timeout"]
[connection signal="request_completed" from="GetPole" to="." method="_on_GetPole_request_completed"]
